Updated entities and implemented service
