# service/src/main/java/io/nuvalence/user/management/api/service/enums/CustomFieldType.java
@@ -1,0 +1,38 @@
+package io.nuvalence.user.management.api.service.enums;
+
+import com.fasterxml.jackson.annotation.JsonValue;
+
+/**
+ * Represents the possible types for custom fields.
+ */
+public enum CustomFieldType {
+    DROP_DOWN_LIST("drop_down_list");
+
+    @JsonValue
+    private final String type;
+
+    CustomFieldType(String type) {
+        this.type = type;
+    }
+
+    @Override
+    public String toString() {
+        return this.type;
+    }
+
+    /**
+     * Converts between strings and CustomFieldType enum.
+     *
+     * @param text the text representation of the enum.
+     * @return an enum value.
+     */
+    public static CustomFieldType fromText(String text) {
+        for (CustomFieldType type : CustomFieldType.values()) {
+            if (type.toString().equalsIgnoreCase(text)) {
+                return type;
+            }
+        }
+
+        return DROP_DOWN_LIST;
+    }
+}
