# service/src/main/java/io/nuvalence/user/management/api/service/mapper/UserEntityMapper.java
@@ -35,6 +35,7 @@ public interface UserEntityMapper {
      */
     @Mapping(target = "createdAt", ignore = true)
     @Mapping(target = "userRoleEntities", ignore = true)
+    @Mapping(target = "customFields", ignore = true)
     UserEntity convertUserModelToUserEntity(UserDTO user);
 
     /**
@@ -46,5 +47,7 @@ public interface UserEntityMapper {
      */
     @Mapping(target = "createdAt", ignore = true)
     @Mapping(target = "userRoleEntities", ignore = true)
+    @Mapping(target = "customFields", ignore = true)
+    @Mapping(target = "id", ignore = true)
     UserEntity convertUserCreationRequestToUserEntity(UserCreationRequest user);
 }
